Made all paths relative.

--- a/Tests/ZoneLightingTests/App.config
+++ b/Tests/ZoneLightingTests/App.config
@@ -5,9 +5,9 @@
     </startup>
 	<appSettings>
 		<add key="FadeCandyServerURL" value="ws://127.0.0.1:7890"/>
-		<add key="ProgramDLLFolder" value ="C:\Anshul\ZoneLighting\ExternalPrograms\bin\Debug"/>
-		<add key="ZoneDLLFolder" value ="C:\Anshul\ZoneLighting\ExternalZones\bin\Debug"/>
-		<add key="ZoneConfigurationSaveFile" value ="C:\Anshul\ZoneLighting\ZoneLighting\ZoneConfiguration.config"/>
-		<add key="TestZoneConfigurationSaveFile" value ="C:\Anshul\ZoneLighting\ZoneLighting\ZoneConfigurationTest.config"/>
+		<add key="ProgramDLLFolder" value="..\..\..\..\ExternalPrograms\bin\Release"/>
+		<add key="ZoneDLLFolder" value="..\..\..\..\ExternalZones\bin\Release"/>
+		<add key="ZoneConfigurationSaveFile" value="ZoneConfiguration.config"/>
+		<add key="TestZoneConfigurationSaveFile" value="TestZoneConfiguration.config"/>
 	</appSettings>
 </configuration>
