Changed the test config file key specific to the test. Made ALL (including Console) paths relative.

--- a/Tests/ZoneLightingTests/App.config
+++ b/Tests/ZoneLightingTests/App.config
@@ -8,6 +8,7 @@
 		<add key="ProgramDLLFolder" value="..\..\..\..\ExternalPrograms\bin\Release"/>
 		<add key="ZoneDLLFolder" value="..\..\..\..\ExternalZones\bin\Release"/>
 		<add key="ZoneConfigurationSaveFile" value="ZoneConfiguration.config"/>
-		<add key="TestZoneConfigurationSaveFile" value="TestZoneConfiguration.config"/>
+		<add key="InitializeFromZoneConfiguration_Works_TestFile" value ="..\..\Resources\InitializeFromZoneConfiguration_Works_TestFile.config"/>
+		<add key="TestProgramModuleDirectory" value ="..\..\Resources\Programs"/>
 	</appSettings>
 </configuration>
