--- a/Console/App.config
+++ b/Console/App.config
@@ -5,8 +5,10 @@
     </startup>
 	<appSettings>
 		<add key="FadeCandyServerURL" value="ws://127.0.0.1:7890"/>
-		<add key="ProgramDLLFolder" value ="C:\Anshul\ZoneLighting\ExternalPrograms\bin\Debug"/>
-		<add key="ZoneDLLFolder" value ="C:\Anshul\ZoneLighting\ExternalZones\bin\Debug"/>
-		<add key="ZoneConfigurationSaveFile" value ="C:\Anshul\ZoneLighting\ZoneLighting\ZoneConfigurationLocal.config"/>
+		<add key="ProgramDLLFolder" value="..\..\..\..\ExternalPrograms\bin\Release"/>
+		<add key="ZoneDLLFolder" value="..\..\..\..\ExternalZones\bin\Release"/>
+		<add key="ZoneConfigurationSaveFile" value="ZoneConfiguration.config"/>
+		<add key="InitializeFromZoneConfiguration_Works_TestFile" value ="..\..\Resources\InitializeFromZoneConfiguration_Works_TestFile.config"/>
+		<add key="TestProgramModuleDirectory" value ="..\..\Resources\Programs"/>
 	</appSettings>
 </configuration>
