Changed location of Program and Zones folder to point to Test rather than Production

--- a/WebController/Web.config
+++ b/WebController/Web.config
@@ -18,8 +18,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	<add key="FadeCandyServerURL" value="ws://127.0.0.1:7890"/>
-	<add key="ProgramDLLFolder" value ="E:\Production\ZoneLighting\WebController\Programs"/>
-	<add key="ZoneDLLFolder" value ="E:\Production\ZoneLighting\WebController\Zones"/>
+	<add key="ProgramDLLFolder" value ="E:\Test\ZoneLighting\WebController\Programs"/>
+	<add key="ZoneDLLFolder" value ="E:\Test\ZoneLighting\WebController\Zones"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
