Realized I had added the configs twice. Removing the old set and keeping the new. Also updated the nuspec file to package the configs to be deployed.

--- a/WebController/WebController.nuspec
+++ b/WebController/WebController.nuspec
@@ -15,5 +15,6 @@
   <files>
 	<file src="Programs\*.*" target="Programs" />
 	<file src="Zones\*.*" target="Zones" />
+	<file src="FadeCandy\*.*" target="FadeCandy" />
   </files>
 </package>
