Added config paths for FCServer.

--- a/WebController/Web.config
+++ b/WebController/Web.config
@@ -20,6 +20,8 @@
 	<add key="FadeCandyServerURL" value="ws://127.0.0.1:7890"/>
 	<add key="ProgramDLLFolder" value ="E:\Test\ZoneLighting\WebController\Programs"/>
 	<add key="ZoneDLLFolder" value ="E:\Test\ZoneLighting\WebController\Zones"/>
+	<add key="FCServerExecutablePath" value ="..\..\ZoneLighting\FadeCandy\fcserver.exe"/>
+	<add key="FCServerConfigFilePath" value ="..\FadeCandy\basement.json"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
