Missed some config files.

--- a/Tests/ZoneLightingTests/App.config
+++ b/Tests/ZoneLightingTests/App.config
@@ -10,5 +10,7 @@
 		<add key="ZoneConfigurationSaveFile" value="ZoneConfiguration.config"/>
 		<add key="InitializeFromZoneConfiguration_Works_TestFile" value ="..\..\Resources\InitializeFromZoneConfiguration_Works_TestFile.config"/>
 		<add key="TestProgramModuleDirectory" value ="..\..\Resources\Programs"/>
+		<add key="FCServerExecutablePath" value ="..\..\..\..\ZoneLighting\FadeCandy\fcserver.exe"/>
+		<add key="FCServerConfigFilePath" value ="..\..\Resources\FadeCandy\fcserverConfig.json"/>
 	</appSettings>
 </configuration>
