Need to include the fcserver executables in the deployed WebController.

--- a/WebController/WebController.nuspec
+++ b/WebController/WebController.nuspec
@@ -16,5 +16,6 @@
 	<file src="Programs\*.*" target="Programs" />
 	<file src="Zones\*.*" target="Zones" />
 	<file src="FadeCandy\*.*" target="FadeCandy" />
+	<file src="..\ZoneLighting\FadeCandy\*.*" target="FadeCandy" />
   </files>
 </package>
