--- a/WebController/Web.config
+++ b/WebController/Web.config
@@ -13,7 +13,7 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
+	<add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
@@ -22,6 +22,11 @@
 	<add key="ZoneDLLFolder" value ="E:\Test\ZoneLighting\WebController\Zones"/>
 	<add key="FCServerExecutablePath" value ="FadeCandy\fcserver.exe"/>
 	<add key="FCServerConfigFilePath" value ="FadeCandy\basement.json"/>
+	<add key="ZoneConfigurationSaveFile" value="ZoneConfiguration.config" />
+	<add key="ProgramSetConfigurationSaveFile" value="ProgramSetConfiguration.config" />		
+	<add key="FirstRun" value="true"/>
+	<add key="LoadZoneModules" value="false"/>
+	<add key="InitAction" value="RunShimmerInBasement"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
